sfdx-project/force-app/main/default/objects/Account/fields/Astrum_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Astrum_Fit_Score__c</fullName>
    <label>Astrum Fit Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>