sfdx-project/force-app/main/default/objects/Account/fields/Company_Stage__c.field-meta.xml
<CustomField>
    <fullName>Company_Stage__c</fullName>
    <label>Company Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Seed / Pre-Series A</fullName><default>false</default><label>Seed / Pre-Series A</label></value>
            <value><fullName>Series A</fullName><default>false</default><label>Series A</label></value>
            <value><fullName>Series B</fullName><default>false</default><label>Series B</label></value>
            <value><fullName>Series C</fullName><default>false</default><label>Series C</label></value>
            <value><fullName>Series D+</fullName><default>false</default><label>Series D+</label></value>
            <value><fullName>Public</fullName><default>false</default><label>Public</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>