sfdx-project/force-app/main/default/objects/Account/fields/Is_US_HQ__c.field-meta.xml
<CustomField>
    <fullName>Is_US_HQ__c</fullName>
    <defaultValue>false</defaultValue>
    <label>US HQ?</label>
    <type>Checkbox</type>
</CustomField>