sfdx-project/force-app/main/default/objects/Account/fields/Last_Score_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Score_Date__c</fullName>
    <label>Last Score Date</label>
    <type>DateTime</type>
</CustomField>