sfdx-project/force-app/main/default/objects/Account/fields/Lead_Agent_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agent_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Lead Agent External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>