sfdx-project/force-app/main/default/objects/Account/fields/Lead_Agent_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agent_Status__c</fullName>
    <label>Lead Agent Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Active</fullName><default>true</default><label>Active</label></value>
            <value><fullName>Archived</fullName><default>false</default><label>Archived</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>