sfdx-project/force-app/main/default/objects/Account/fields/Lead_Agent_TA__c.field-meta.xml
<CustomField>
    <fullName>Lead_Agent_TA__c</fullName>
    <label>Lead Agent TA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Oncology &amp; Hematology</fullName><default>false</default><label>Oncology &amp; Hematology</label></value>
            <value><fullName>CNS</fullName><default>false</default><label>CNS</label></value>
            <value><fullName>Immunology</fullName><default>false</default><label>Immunology</label></value>
            <value><fullName>Cardiometabolic</fullName><default>false</default><label>Cardiometabolic</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
            <value><fullName>Unknown</fullName><default>true</default><label>Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>