sfdx-project/force-app/main/default/objects/Account/fields/Phase_I_Readiness_Score__c.field-meta.xml
<CustomField>
    <fullName>Phase_I_Readiness_Score__c</fullName>
    <label>Phase I Readiness Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>