sfdx-project/force-app/main/default/objects/Account/fields/Score_Breakdown__c.field-meta.xml
<CustomField>
    <fullName>Score_Breakdown__c</fullName>
    <label>Score Breakdown</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Human-readable explanation of score components, written by the scoring worker.</description>
</CustomField>