sfdx-project/force-app/main/default/objects/Account/fields/Signal_Count__c.field-meta.xml
<CustomField>
    <fullName>Signal_Count__c</fullName>
    <label>Signal Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>