sfdx-project/force-app/main/default/objects/Account/fields/Source_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>Source_Confidence_Score__c</fullName>
    <label>Source Confidence Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>