sfdx-project/force-app/main/default/objects/Account/recordTypes/Astrum_Target_Biotech.recordType-meta.xml
<RecordType>
    <fullName>Astrum_Target_Biotech</fullName>
    <active>true</active>
    <description>US biotech/pharma companies tracked by the Astrum Phase I Lead Identification Agent.</description>
    <label>Astrum Target Biotech</label>
</RecordType>