sfdx-project/force-app/main/default/objects/Account/listViews/Hot_Leads_Pilot.listView-meta.xml
<ListView>
    <fullName>Hot_Leads_Pilot</fullName>
    <columns>Overall_Priority_Score__c</columns>
    <columns>Lead_Agent_TA__c</columns>
    <columns>Modality__c</columns>
    <columns>Company_Stage__c</columns>
    <columns>Is_US_HQ__c</columns>
    <columns>HQ_Country__c</columns>
    <columns>Last_Signal_Date__c</columns>
    <columns>Lead_Agent_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority_Band__c</field>
        <operation>equals</operation>
        <value>Hot</value>
    </filters>
    <label>Hot Leads — Pilot</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>